--- a/style.css
+++ b/style.css
@@ -50,9 +50,27 @@ body{
     background-color: rgb(214, 82, 247);
 }.mySpa4{
     width: 100%;
-    height: 800px;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgb(247, 82, 82);
+}
+.errows{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    margin-top: 120%;
+    margin-left:70%;
+}
+.errows i{
+    width: 50px;
+    height: 50px;
+    color: #fff;
+    font-size: 26px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: rgb(19, 13, 78);
 }
