--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body{
     background-color: rgb(214, 82, 247);
 }.mySpa4{
     width: 100%;
-    height: 500px;
+    height: 800px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,9 +59,12 @@ body{
 .errows{
     width: 50px;
     height: 50px;
-    position: absolute;
-    margin-top: 120%;
-    margin-left:70%;
+    /* position: absolute; */
+    /* margin-top: -120px;
+    margin-left:70%; */
+    float: right;
+    margin-right: 30px;
+    margin-top: -100px;
 }
 .errows i{
     width: 50px;
