--- a/style.css
+++ b/style.css
@@ -50,27 +50,26 @@ body{
     background-color: rgb(214, 82, 247);
 }.mySpa4{
     width: 100%;
-    height: 600px;
+    height: 800px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgb(247, 82, 82);
 }
 .errows{
-    width: 50px;
-    height: 50px;
-    /* position: absolute; */
-    /* margin-top: -120px;
-    margin-left:70%; */
-    float: right;
-    margin-right: 30px;
-    margin-top: -100px;
+    width: 100%;
+    height: 100%;
 }
 .errows i{
+    position: sticky;
+    top: 85%;
+    float: right;
     width: 50px;
     height: 50px;
     color: #fff;
     font-size: 26px;
+    margin-top: -50px;
+    margin-right: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
